# serializer version: 1
# name: test_field_to_grid_capture_typed
  TreeBuilder(
    collapse=False,
    fake_user=False,
    ignore_visibility=False,
    inputs=InputInterfaceContext(
      builder=...,
      interface=bpy.data.node_groups['Geometry Node Group']...NodeTreeInterface,
      tree=bpy.data.node_groups['Geometry Node Group'],
    ),
    nodes=bpy.data.node_groups['Geometry Node Group'].nodes,
    outputs=OutputInterfaceContext(
      builder=...,
      interface=bpy.data.node_groups['Geometry Node Group']...NodeTreeInterface,
      tree=bpy.data.node_groups['Geometry Node Group'],
    ),
    tree=bpy.data.node_groups['Geometry Node Group'],
  )
# ---
# name: test_get_named_grid
  '''
  ```{mermaid}
  graph LR
      N0("Position"):::input-node
      N1("Volume Cube<br/><small>(-1,-1,-1)</small>"):::geometry-node
      N2("Vector Math<br/><small>(SCALE)</small><br/><small>×2</small>"):::vector-node
      N3("Get Named Grid"):::geometry-node
      N4("Position"):::input-node
      N5("Vector Math<br/><small>(ADD)</small><br/><small>(1e+01,1e+01,1e+01)</small>"):::vector-node
      N6("Field to Grid"):::geometry-node
      N1 -->|"Volume->Volume"| N3
      N0 -->|"Position->Vector"| N2
      N2 -->|"Vector->Vector"| N5
      N4 -->|"Position->Position"| N6
      N5 -->|"Vector->value"| N6
      N3 -->|"Grid->Topology"| N6
  ```
  '''
# ---
# name: test_repeat
  '''
  ```{mermaid}
  graph LR
      N0("Cube"):::geometry-node
      N1("Position"):::input-node
      N2("Vector"):::input-node
      N3("Repeat Input"):::default-node
      N4("Position"):::input-node
      N5("Vector Math<br/><small>(SCALE)</small>"):::vector-node
      N6("Vector Math<br/><small>(MULTIPLY)</small>"):::vector-node
      N7("Vector Math<br/><small>(MULTIPLY)</small>"):::vector-node
      N8("Set Position"):::geometry-node
      N9("Repeat Output"):::default-node
      N10("Set Position"):::geometry-node
      N0 -->|"Mesh->cube"| N3
      N1 -->|"Position->Position"| N3
      N3 -->|"Position->Vector"| N6
      N4 -->|"Position->Vector"| N6
      N2 -->|"Vector->Vector"| N5
      N3 -->|"Iteration->Scale"| N5
      N5 -->|"Vector->Vector"| N7
      N6 -->|"Vector->Vector"| N7
      N7 -->|"Vector->Offset"| N8
      N3 -->|"cube->Geometry"| N8
      N8 -->|"Geometry->cube"| N9
      N9 -->|"Position->Position"| N10
      N9 -->|"cube->Geometry"| N10
      N6 -->|"Vector->Position"| N9
  ```
  '''
# ---
# name: test_repeat.1
  '''
  ```{mermaid}
  graph LR
      N0("Repeat Input"):::default-node
      N1("Random Value<br/><small>(-1,-1,-1)</small>"):::converter-node
      N2("Points"):::geometry-node
      N3("Join Geometry"):::geometry-node
      N4("Repeat Output"):::default-node
      N3 -->|"Geometry->Geometry"| N4
      N0 -->|"Iteration->Seed"| N1
      N0 -->|"Iteration->Count"| N2
      N1 -->|"Value->Position"| N2
      N2 -->|"Points->Geometry"| N3
      N0 -->|"Geometry->Geometry"| N3
  ```
  '''
# ---
# name: test_simulation
  '''
  ```{mermaid}
  graph LR
      N0("Cube"):::geometry-node
      N1("Position"):::input-node
      N2("Vector"):::input-node
      N3("Simulation Input"):::default-node
      N4("Position"):::input-node
      N5("Vector Math<br/><small>(SCALE)</small>"):::vector-node
      N6("Vector Math<br/><small>(MULTIPLY)</small>"):::vector-node
      N7("Vector Math<br/><small>(MULTIPLY)</small>"):::vector-node
      N8("Set Position"):::geometry-node
      N9("Simulation Output"):::default-node
      N10("Set Position"):::geometry-node
      N0 -->|"Mesh->cube"| N3
      N1 -->|"Position->Position"| N3
      N3 -->|"Position->Vector"| N6
      N4 -->|"Position->Vector"| N6
      N2 -->|"Vector->Vector"| N5
      N3 -->|"Delta Time->Scale"| N5
      N5 -->|"Vector->Vector"| N7
      N6 -->|"Vector->Vector"| N7
      N7 -->|"Vector->Offset"| N8
      N3 -->|"cube->Geometry"| N8
      N8 -->|"Geometry->cube"| N9
      N9 -->|"Position->Position"| N10
      N9 -->|"cube->Geometry"| N10
      N6 -->|"Vector->Position"| N9
  ```
  '''
# ---
# name: test_switch_repeatzone
  '''
  ```{mermaid}
  graph LR
      N0("Group Input"):::default-node
      N1("Repeat Input"):::default-node
      N2("Cube"):::geometry-node
      N3("Ico Sphere"):::geometry-node
      N4("Grid"):::geometry-node
      N5("Index Switch"):::converter-node
      N6("Join Geometry"):::geometry-node
      N7("Repeat Output"):::default-node
      N8("Group Output"):::default-node
      N0 -->|"Geometry->Geometry"| N1
      N2 -->|"Mesh->0"| N5
      N3 -->|"Mesh->1"| N5
      N4 -->|"Mesh->2"| N5
      N1 -->|"Iteration->Index"| N5
      N5 -->|"Output->Geometry"| N6
      N6 -->|"Geometry->Geometry"| N7
      N7 -->|"Geometry->Geometry"| N8
      N1 -->|"Geometry->Geometry"| N6
  ```
  '''
# ---
